--- a/backend/package.json
+++ b/backend/package.json
@@ -3,9 +3,8 @@
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
-    "dev":"nodemon backend/index.js",
-    "build":"npm install && npm install --prefix frontend && npm run build --prefix frontend",
-    "start": "node backend/index.js"
+    "dev":"nodemon index.js",
+    "start": "node index.js"
   },
   "keywords": [],
   "author": "",
